--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(theme_carto)
 export(theme_graph)
 import(magrittr)
 import(patchwork)
+importFrom(COGiter,cog_df_to_list)
 importFrom(cartography,getBreaks)
 importFrom(dplyr,filter)
 importFrom(dplyr,inner_join)
@@ -43,7 +44,6 @@ importFrom(ggplot2,xlim)
 importFrom(ggplot2,ylim)
 importFrom(glue,glue)
 importFrom(hrbrthemes,theme_ipsum_rc)
-importFrom(patchwork,plot_layout)
 importFrom(rlang,"!!")
 importFrom(rlang,enquo)
 importFrom(tibble,tribble)
