--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,20 +3,37 @@
 export(carte_indic)
 export(carte_indic_croissance)
 export(composeur_carte)
+export(creer_indicateurs_rpls_2018)
+export(creer_indicateurs_rpls_2018_publication)
 export(graph_repartition_par_date)
 export(graphique_comparaison_parc_recent)
 export(legende_carte_indic)
+export(lire_rep_rpls_loi_2018)
+export(lire_rpls_loi_2018)
+export(selectionner_rpls_loi_2018)
 export(theme_carto)
 export(theme_graph)
 import(magrittr)
 import(patchwork)
 importFrom(COGiter,cog_df_to_list)
+importFrom(COGiter,cogifier)
 importFrom(cartography,getBreaks)
+importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
+importFrom(dplyr,full_join)
+importFrom(dplyr,funs)
+importFrom(dplyr,group_by_if)
 importFrom(dplyr,inner_join)
+importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
+importFrom(dplyr,mutate_at)
+importFrom(dplyr,mutate_if)
 importFrom(dplyr,pull)
+importFrom(dplyr,rename)
 importFrom(dplyr,select)
+importFrom(dplyr,summarise_all)
+importFrom(dplyr,ungroup)
+importFrom(drealthemes,scale_fill_dreal_d)
 importFrom(forcats,fct_drop)
 importFrom(forcats,fct_explicit_na)
 importFrom(forcats,fct_relevel)
@@ -44,8 +61,22 @@ importFrom(ggplot2,xlim)
 importFrom(ggplot2,ylim)
 importFrom(glue,glue)
 importFrom(hrbrthemes,theme_ipsum_rc)
+importFrom(purrr,map)
+importFrom(purrr,reduce)
+importFrom(readr,col_character)
+importFrom(readr,col_date)
+importFrom(readr,col_factor)
+importFrom(readr,col_integer)
+importFrom(readr,col_number)
+importFrom(readr,locale)
+importFrom(readr,read_delim)
 importFrom(rlang,"!!")
+importFrom(rlang,.data)
 importFrom(rlang,enquo)
 importFrom(tibble,tribble)
+importFrom(tidyr,complete)
+importFrom(tidyr,drop_na)
+importFrom(tidyr,gather)
+importFrom(tidyr,separate)
 importFrom(tidyr,spread)
 importFrom(viridisLite,viridis)
