--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,8 @@ export(theme_carto)
 export(theme_graph)
 import(magrittr)
 import(patchwork)
+import(stats)
+import(utils)
 importFrom(COGiter,cog_df_to_list)
 importFrom(COGiter,cogifier)
 importFrom(cartography,getBreaks)
@@ -34,6 +36,7 @@ importFrom(dplyr,select)
 importFrom(dplyr,summarise_all)
 importFrom(dplyr,ungroup)
 importFrom(drealthemes,scale_fill_dreal_d)
+importFrom(drealthemes,theme_dreal)
 importFrom(forcats,fct_drop)
 importFrom(forcats,fct_explicit_na)
 importFrom(forcats,fct_relevel)
@@ -60,7 +63,6 @@ importFrom(ggplot2,theme_minimal)
 importFrom(ggplot2,xlim)
 importFrom(ggplot2,ylim)
 importFrom(glue,glue)
-importFrom(hrbrthemes,theme_ipsum_rc)
 importFrom(purrr,map)
 importFrom(purrr,reduce)
 importFrom(readr,col_character)
