--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,15 +2,26 @@
 
 export(carte_indic)
 export(carte_indic_croissance)
+export(carte_synthese)
 export(composeur_carte)
-export(creer_indicateurs_rpls_2018)
-export(creer_indicateurs_rpls_2018_publication)
+export(euro_m2_format)
+export(euro_m2_format_ggplot)
+export(evo_parc_hlm)
 export(graph_repartition_par_date)
 export(graphique_comparaison_parc_recent)
+export(graphique_synthese_collectif)
+export(graphique_synthese_loyer)
+export(graphique_synthese_parc_epci)
+export(graphique_synthese_taux_hlm)
+export(graphique_synthese_taux_qpv)
 export(legende_carte_indic)
-export(lire_rep_rpls_loi_2018)
-export(lire_rpls_loi_2018)
-export(selectionner_rpls_loi_2018)
+export(loyer_m2)
+export(nombre_format)
+export(parc_hlm)
+export(pourcent_collectif)
+export(pourcent_format)
+export(pourcent_parc_hlm)
+export(pourcent_qpv)
 export(theme_carto)
 export(theme_graph)
 import(magrittr)
@@ -18,67 +29,82 @@ import(patchwork)
 import(stats)
 import(utils)
 importFrom(COGiter,cog_df_to_list)
-importFrom(COGiter,cogifier)
 importFrom(cartography,getBreaks)
-importFrom(dplyr,bind_rows)
+importFrom(dplyr,arrange)
+importFrom(dplyr,desc)
 importFrom(dplyr,filter)
-importFrom(dplyr,full_join)
-importFrom(dplyr,funs)
-importFrom(dplyr,group_by_if)
+importFrom(dplyr,group_by)
 importFrom(dplyr,inner_join)
-importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
-importFrom(dplyr,mutate_at)
 importFrom(dplyr,mutate_if)
 importFrom(dplyr,pull)
-importFrom(dplyr,rename)
 importFrom(dplyr,select)
-importFrom(dplyr,summarise_all)
+importFrom(dplyr,summarise)
+importFrom(dplyr,top_n)
 importFrom(dplyr,ungroup)
+importFrom(drealthemes,dreal_cols)
+importFrom(drealthemes,dreal_pal)
+importFrom(drealthemes,scale_color_dreal_d)
+importFrom(drealthemes,scale_fill_dreal_c)
 importFrom(drealthemes,scale_fill_dreal_d)
 importFrom(drealthemes,theme_dreal)
 importFrom(forcats,fct_drop)
 importFrom(forcats,fct_explicit_na)
+importFrom(forcats,fct_inorder)
 importFrom(forcats,fct_relevel)
 importFrom(forcats,fct_reorder2)
+importFrom(forcats,fct_rev)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,annotate)
+importFrom(ggplot2,coord_equal)
 importFrom(ggplot2,coord_flip)
 importFrom(ggplot2,coord_sf)
+importFrom(ggplot2,element_blank)
+importFrom(ggplot2,element_rect)
+importFrom(ggplot2,element_text)
+importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,geom_histogram)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_segment)
 importFrom(ggplot2,geom_sf)
+importFrom(ggplot2,geom_sf_label)
+importFrom(ggplot2,geom_text)
 importFrom(ggplot2,geom_violin)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,guide_legend)
+importFrom(ggplot2,guides)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,scale_alpha)
 importFrom(ggplot2,scale_color_manual)
 importFrom(ggplot2,scale_color_viridis_d)
 importFrom(ggplot2,scale_fill_manual)
 importFrom(ggplot2,scale_fill_viridis_d)
+importFrom(ggplot2,scale_size)
+importFrom(ggplot2,scale_size_area)
 importFrom(ggplot2,scale_x_continuous)
+importFrom(ggplot2,scale_y_continuous)
+importFrom(ggplot2,stat_sf_coordinates)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_minimal)
+importFrom(ggplot2,theme_void)
+importFrom(ggplot2,unit)
 importFrom(ggplot2,xlim)
 importFrom(ggplot2,ylim)
+importFrom(ggrepel,geom_text_repel)
+importFrom(ggspatial,annotation_map_tile)
 importFrom(glue,glue)
-importFrom(purrr,map)
-importFrom(purrr,reduce)
-importFrom(readr,col_character)
-importFrom(readr,col_date)
-importFrom(readr,col_factor)
-importFrom(readr,col_integer)
-importFrom(readr,col_number)
-importFrom(readr,locale)
-importFrom(readr,read_delim)
 importFrom(rlang,"!!")
 importFrom(rlang,.data)
 importFrom(rlang,enquo)
+importFrom(scales,number_format)
+importFrom(stringr,str_detect)
+importFrom(stringr,str_wrap)
 importFrom(tibble,tribble)
-importFrom(tidyr,complete)
-importFrom(tidyr,drop_na)
-importFrom(tidyr,gather)
-importFrom(tidyr,separate)
+importFrom(tidyr,pivot_longer)
 importFrom(tidyr,spread)
 importFrom(viridisLite,viridis)
+importFrom(waffle,geom_pictogram)
+importFrom(waffle,scale_label_pictogram)
+importFrom(waffle,theme_enhance_waffle)
+importFrom(xfun,read_utf8)
+importFrom(xfun,write_utf8)
